added light mode in about

--- a/src/locales/bn/translation.json
+++ b/src/locales/bn/translation.json
@@ -41,10 +41,18 @@
     "about": "সম্পর্কে",
     "skills": "দক্ষতা",
     "projects": "প্রজেক্টসমূহ"
-  }
+  },
+
+  "githubButton": "গিটহাব",
+  "resumeButton": "রিজিউমি ডাউনলোড",
 
 
-
-
-
+  "AboutMe": "আমার সম্পর্কে"
 }
+
+
+
+
+
+
+
