--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -40,8 +40,13 @@
     "about": "About",
     "skills": "Skills",
     "projects": "Projects"
-  }
+  },
 
+  
+  
+  "githubButton": "GitHub",
+  "resumeButton": "Get Resume",
 
+  "AboutMe": "About Me"
 
 }
