gave bangla lang in skills carou

--- a/src/locales/bn/translation.json
+++ b/src/locales/bn/translation.json
@@ -1,7 +1,5 @@
 {
-
-  "Description" : "রিয়্যাক্ট, নেক্সট.জেএস, নোড.জেএস, এবং MongoDB-তে পারদর্শী একজন উদ্যমী ফুল-স্ট্যাক ডেভেলপার। পরিচ্ছন্ন এবং পরিমাপযোগ্য কোড লিখতে, অ্যাপ্লিকেশন পারফরম্যান্স অপ্টিমাইজ করতে এবং aspiring ডেভেলপারদের পরামর্শ দিতে নিবেদিত। ফ্রন্টএন্ড এবং ব্যাকএন্ড উভয় প্রযুক্তিতে শক্তিশালী ভিত্তির সাথে, আমি শক্তিশালী এবং রক্ষণাবেক্ষণযোগ্য কোডবেস নিশ্চিত করার সাথে সাথে নির্বিঘ্ন ব্যবহারকারীর অভিজ্ঞতা তৈরি করতে চেষ্টা করি।",
-
+  "Description": "রিয়্যাক্ট, নেক্সট.জেএস, নোড.জেএস, এবং MongoDB-তে পারদর্শী একজন উদ্যমী ফুল-স্ট্যাক ডেভেলপার। পরিচ্ছন্ন এবং পরিমাপযোগ্য কোড লিখতে, অ্যাপ্লিকেশন পারফরম্যান্স অপ্টিমাইজ করতে এবং aspiring ডেভেলপারদের পরামর্শ দিতে নিবেদিত। ফ্রন্টএন্ড এবং ব্যাকএন্ড উভয় প্রযুক্তিতে শক্তিশালী ভিত্তির সাথে, আমি শক্তিশালী এবং রক্ষণাবেক্ষণযোগ্য কোডবেস নিশ্চিত করার সাথে সাথে নির্বিঘ্ন ব্যবহারকারীর অভিজ্ঞতা তৈরি করতে চেষ্টা করি।",
   "Name": "নাম",
   "NameValue": "আহনাফ শাহরিয়ার",
   "Age": "বয়স",
@@ -12,10 +10,7 @@
   "EducationValue": "এখনো ৮ম শ্রেণিতে পড়ছি",
   "Languages": "ভাষাসমূহ",
   "LanguagesValue": "ইংরেজি/বাংলা/হিন্দি",
-
   "heroTitle": "হ্যালো!\nআমি আহনাফ\nশাহরিয়ার",
-
-
   "rotatingTexts": [
     "ফুল-স্ট্যাক ডেভেলপার",
     "ফ্রন্ট-এন্ড ডেভেলপার",
@@ -25,34 +20,90 @@
     "ওয়েব ডেভেলপার",
     "সফটওয়্যার ইঞ্জিনিয়ার"
   ],
-
-
-
-
   "heroSubtitle": "ফুল স্ট্যাক ডেভেলপার • নেক্সট.জেএস | রিয়্যাক্ট | টেইলউইন্ড | টাইপস্ক্রিপ্ট | নোড.জেএস | মঙ্গোডিবি | এক্সপ্রেস.জেএস | প্রিজমা",
-
-
   "navbarName": "আহনাফ শাহরিয়ার",
-
-
-
   "nav": {
     "home": "হোম",
     "about": "সম্পর্কে",
     "skills": "দক্ষতা",
     "projects": "প্রজেক্টসমূহ"
   },
-
   "githubButton": "গিটহাব",
   "resumeButton": "রিজিউমি ডাউনলোড",
-
-
-  "AboutMe": "আমার সম্পর্কে"
-}
-
-
-
-
-
-
-
+  "AboutMe": "আমার সম্পর্কে",
+  "skills_section_description": "আমি এই মূল ক্ষেত্রগুলোতে দক্ষ, যা আপনার ব্যবসায় মূল্য যোগ করে এবং ব্যবহারকারীদের আনন্দ দেয় এমন অসাধারণ ডিজিটাল অভিজ্ঞতা তৈরি করতে সহায়তা করে।",
+  "skills": {
+    "github": {
+      "name": "গিটহাব",
+      "description": "কোড সংরক্ষণ, ব্যবস্থাপনা ও ভাগ করার জন্য একটি ডেভেলপার প্ল্যাটফর্ম, যা Git-এর ডিস্ট্রিবিউটেড ভার্সন কন্ট্রোল ও অ্যাক্সেস কন্ট্রোল ফিচার যুক্ত করেছে।"
+    },
+    "react": {
+      "name": "রিয়্যাক্ট",
+      "description": "কম্পোনেন্ট-ভিত্তিক ইউজার ইন্টারফেস তৈরির জন্য জাভাস্ক্রিপ্ট লাইব্রেরি।"
+    },
+    "nextjs": {
+      "name": "নেক্সটজেএস",
+      "description": "রিয়্যাক্ট ফ্রেমওয়ার্ক, সার্ভার-সাইড রেন্ডারিং ও স্ট্যাটিক সাইটের জন্য।"
+    },
+    "nodejs": {
+      "name": "নোডজেএস",
+      "description": "ক্রোমের V8 ইঞ্জিনে নির্মিত সার্ভার-সাইড কোডের জন্য জাভাস্ক্রিপ্ট রানটাইম।"
+    },
+    "expressjs": {
+      "name": "এক্সপ্রেসজেএস",
+      "description": "নোড.জেএস-এর জন্য দ্রুত, নিরপেক্ষ, মিনিমালিস্ট ওয়েব ফ্রেমওয়ার্ক।"
+    },
+    "mongodb": {
+      "name": "মঙ্গোডিবি",
+      "description": "উচ্চ-ভলিউম ডেটা সংরক্ষণের জন্য ডকুমেন্ট-ভিত্তিক NoSQL ডেটাবেস।"
+    },
+    "tailwind": {
+      "name": "টেইলউইন্ড CSS",
+      "description": "দ্রুত UI ডেভেলপমেন্টের জন্য ইউটিলিটি-ফার্স্ট CSS ফ্রেমওয়ার্ক।"
+    },
+    "typescript": {
+      "name": "টাইপস্ক্রিপ্ট",
+      "description": "জাভাস্ক্রিপ্ট ভিত্তিক একটি শক্তিশালী টাইপড প্রোগ্রামিং ভাষা।"
+    },
+    "git": {
+      "name": "গিট",
+      "description": "সোর্স কোডের পরিবর্তন ট্র্যাক করার জন্য একটি বিতরণকৃত ভার্সন কন্ট্রোল সিস্টেম।"
+    },
+    "prisma": {
+      "name": "প্রিজমা",
+      "description": "নোড.জেএস ও টাইপস্ক্রিপ্টের জন্য আধুনিক ডেটাবেস টুলকিট।"
+    },
+    "redux": {
+      "name": "রিডাক্স",
+      "description": "জাভাস্ক্রিপ্ট অ্যাপ্লিকেশনের জন্য একটি পূর্বানুমানযোগ্য স্টেট কন্টেইনার।"
+    },
+    "framermotion": {
+      "name": "ফ্রেমার মোশন",
+      "description": "রিয়্যাক্টের জন্য প্রোডাকশন-রেডি মোশন লাইব্রেরি।"
+    },
+    "figma": {
+      "name": "ফিগমা",
+      "description": "সহযোগিতামূলক ডিজাইনের জন্য ওয়েব-ভিত্তিক UI/UX ডিজাইন টুল।"
+    },
+    "vercel": {
+      "name": "ভার্সেল",
+      "description": "ওয়েব ডেভেলপমেন্ট ও ডিপ্লয়মেন্টের জন্য ক্লাউড প্ল্যাটফর্ম।"
+    },
+    "shadcn": {
+      "name": "ShadCN",
+      "description": "Radix ও Tailwind CSS দিয়ে তৈরি আনস্টাইলড, অ্যাক্সেসিবল UI কম্পোনেন্ট।"
+    },
+    "bootstrap": {
+      "name": "বুটস্ট্র্যাপ",
+      "description": "রেসপনসিভ ও মোবাইল-ফার্স্ট ওয়েবসাইট ডেভেলপমেন্টের জন্য ফ্রন্ট-এন্ড ফ্রেমওয়ার্ক।"
+    },
+    "material": {
+      "name": "ম্যাটেরিয়াল UI",
+      "description": "প্রি-ডিজাইনড কম্পোনেন্টসহ জনপ্রিয় রিয়্যাক্ট UI ফ্রেমওয়ার্ক।"
+    },
+    "vscode": {
+      "name": "VS কোড",
+      "description": "মাইক্রোসফট দ্বারা নির্মিত শক্তিশালী কোড এডিটর।"
+    }
+  }
+  }
