--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -105,5 +105,34 @@
       "name": "VS Code",
       "description": "A powerful code editor developed by Microsoft."
     }
-  }
+  },
+
+
+"projects_title": "My Projects",
+"projects_section_description": "A showcase of my recent work and creative solutions. Each project represents a unique challenge and learning experience, built with modern technologies and best practices.",
+"projects_show_more": "Show More Projects",
+"projects_show_less": "Show Less Projects",
+"projects_loading_more": "Loading More Projects...",
+"projects_collapsing": "Collapsing Projects...",
+
+
+
+
+
+
+"contact_title": "Let's Connect",
+"contact_description": "Ready to bring your ideas to life? I'm here to help you create something amazing. Whether it's a new project or collaboration, let's start the conversation.",
+"contact_form_title": "Send Message",
+"contact_form_name": "Name",
+"contact_form_name_placeholder": "Your full name",
+"contact_form_email": "Email",
+"contact_form_email_placeholder": "your.email@example.com",
+"contact_form_subject": "Subject",
+"contact_form_subject_placeholder": "Project collaboration",
+"contact_form_message": "Message",
+"contact_form_message_placeholder": "Tell me about your project ideas...",
+"contact_form_send": "Send Message",
+"contact_form_sending": "Sending...",
+"contact_game_title": "Play While You Wait"
+
 }
