added translation to all components

--- a/src/locales/bn/translation.json
+++ b/src/locales/bn/translation.json
@@ -134,6 +134,55 @@
 "contact_form_message_placeholder": "আপনার প্রজেক্ট আইডিয়া সম্পর্কে লিখুন...",
 "contact_form_send": "বার্তা পাঠান",
 "contact_form_sending": "পাঠানো হচ্ছে...",
-"contact_game_title": "অপেক্ষা করতে করতে খেলুন"
+"contact_game_title": "অপেক্ষা করতে করতে খেলুন",
+
+
+
+
+
+
+"tic": {
+  "ai_difficulty": "এআই-এর কঠিনতা",
+  "difficulty_easy": "সহজ",
+  "difficulty_medium": "মাঝারি",
+  "difficulty_hard": "কঠিন",
+  "wins": "জয়",
+  "draws": "ড্র",
+  "losses": "হার",
+  "you": "আপনি",
+  "ai": "এআই",
+  "your_turn": "আপনার পালা! ✨",
+  "ai_turn": "এআই-এর পালা 🎯",
+  "ai_thinking": "এআই ভাবছে... 🤖",
+  "you_won": "আপনি জিতেছেন! 🎉",
+  "ai_won": "এআই জিতেছে! 🤖",
+  "draw": "ড্র হয়েছে! 🤝",
+  "click_to_move": "চাল দিতে ফাঁকা ঘরে ক্লিক করুন",
+  "game_over": "গেম শেষ - নতুন গেম শুরু করুন!",
+  "new_game": "নতুন গেম 🎮",
+  "reset_scores": "স্কোর রিসেট 📊",
+  "celebration_title": "আপনি জিতেছেন!",
+  "celebration_subtitle": "অভিনন্দন! 🏆",
+  "defeat_title": "আপনি হেরেছেন!",
+  "defeat_subtitle": "পরের বার আরও ভালো করুন! 💪"
+},
+
+
+
+"footer": {
+  "quote": "যদি তুমি নর্দমা থেকেও তারা দেখতে পাও,\nতাহলে তুমিই সেই ভাই!",
+  "coding_canvas": "কোডিং আমার ক্যানভাস,",
+  "coding_masterpiece": "প্রতিটি প্রজেক্টই একটি নতুন মাস্টারপিস।",
+  "description": "আমি ব্যবহারকারী-বান্ধব, রেসপনসিভ এবং সুন্দর ওয়েবসাইট তৈরিতে মনোযোগী পেশাদার ওয়েব ডেভেলপমেন্ট সেবা প্রদান করি। চলুন একসাথে আপনার আইডিয়াগুলো বাস্তবায়ন করি!",
+  "email": "ইমেইল",
+  "linkedin": "লিঙ্কডইন",
+  "github": "গিটহাব",
+  "resume": "রিজিউমি",
+  "copyright": "©সমস্ত অধিকার সংরক্ষিত ২০২৫ | ❤ দিয়ে তৈরি",
+  "author": "আহনাফ শাহরিয়ার"
+}
+
+
+
 
   }
